--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <img src="images/my.jpg" alt="" width="350px">
             <div class="contant" >
                 <div >
-                <p><span>أسمي أحمد مصطفي محمد</span> 
+                <p><span> أحمد مصطفي محمد</span> 
                    خريج كلية تربيه نوعية قسم تكنولوجيا
                 <span>تقدير عام جيد جدا معا مرتبة الشرف</span>
             </div>
@@ -39,9 +39,9 @@
                 <div class="skills">
                   <a href="" >الشهادات</a>
                 <div class="container">
-                    <H9>الرخصة الدولية لقيادة الحاسوب(ICDL)</H9><br/>
-                    <H9>الرخصة الدولية لقيادة الحاسوب(ICDL)</H9><br/>
-                    <H9>الرخصة الدولية لقيادة الحاسوب(ICDL)</H9>
+                    <H9>(ICDL)</H9><br/>
+                    <H9></H9><br/>
+                    <H9>(ICDL)</H9>
                   </div>
                 </div>
                 <div class="skills">
