--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                   <br/><br/>
                
                   <a href="" >مهاراتي</a>
-                  <div class="container px-lg-5">
-                  <div class="row mx-lg-n5">
+                  <div class="container ">
+                  <div class="row">
                     <div class="col py-3 px-lg-5" style="border-left:3px dashed white ;">
 
                     
