--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                   <br/><br/>
                
                   <a href="" >مهاراتي</a>
-                  <div class="container ">
+                  <div class="container-fluid">
                   <div class="row">
                     <div class="col py-3 px-lg-5" style="border-left:3px dashed white ;">
 
@@ -313,7 +313,7 @@
   </div>
   <div class="footer-clean">
     <footer>
-        <div class="container">
+        <div class="container-fluid">
             <div class="row justify-content-center">
                 <div class="col-sm-4 col-md-3 item">
                     <h3>Services</h3>
