Edit-IN-CSS-FILE

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
                 <!-- <div class="skills">
                   <a href="" >الشهادات</a>
-                <div class="container">
+                <div class="container-fluid">
                     <H9>(ICDL)</H9><br/>
                     <H9></H9><br/>
                     <H9>(ICDL)</H9>
@@ -51,7 +51,7 @@
                   <br/><br/>
                
                   <a href="" >مهاراتي</a>
-                  <div class="container ">
+                  <div class="container-fluid">
                   <div class="row">
                     <div class="col py-3 px-lg-5" style="border-left:3px dashed white ;">
 
