--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" href="/hijazy/images/logo.png">
     <title>بياناتي</title>
 </head>
@@ -318,15 +317,15 @@
                 <div class="col-sm-4 col-md-3 item">
                     <h3>Services</h3>
                     <ul>
-                        <li><a href="#">Web design</a></li>
+                        <li><a href="#">Web Designer</a></li>
                         <li><a href="#">Development</a></li>
-                        <li><a href="#">Hosting</a></li>
+                        <li><a href="#">DESGIN</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 item">
                     <h3>About</h3>
                     <ul>
-                        <li><a href="#">Company</a></li>
+                        <!-- <li><a href="#">Company</a></li> -->
                         <li><a href="#">Team</a></li>
                         <li><a href="#">Legacy</a></li>
                     </ul>
@@ -340,7 +339,7 @@
                     </ul>
                 </div>
                 <div class="col-lg-3 item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a>
-                    <p class="copyright">Company Name © 2018</p>
+                    <p class="copyright">HIJAZI © 2023</p>
                 </div>
             </div>
         </div>
@@ -348,7 +347,6 @@
 </div>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" ></script>
-  <script src="script.js"></script>
     <script src="js/script.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
